Added CJS menus (TBC)

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -7,7 +7,8 @@ $nav-height: 38px;
 $colours: (
 default: (
 primary: #AD1457,
-primary-alpha: rgba(173,20,87,0.89),
+primary-overlay-start: rgba(173,20,87,0.89),
+primary-overlay-end: rgba(173,20,87,0.91),
 primary-light: #C2185B,
 primary-dark: #880E4F,
 secondary: #FF8F00,
@@ -16,7 +17,8 @@ secondary-dark: #FF6F00
 ),
 charity: (
 primary: #4527A0,
-primary-alpha: rgba(69,39,160,0.89),
+primary-overlay-start: rgba(69,39,160,0.89),
+primary-overlay-end: rgba(69,39,160,0.91),
 primary-light: #512DA8,
 primary-dark: #311B92,
 secondary: #FF8F00,
@@ -25,7 +27,8 @@ secondary-dark: #FF6F00
 ),
 jobs: (
 primary: #2e7d32,
-primary-alpha: rgba(46,125,50,0.89),
+primary-overlay-start: rgba(46,125,50,0.89),
+primary-overlay-end: rgba(46,125,50,0.91),
 primary-light: #388E3C,
 primary-dark: #1b5e20,
 secondary: #ff8f00,
@@ -34,7 +37,8 @@ secondary-dark: #FF6F00
 ),
 goodmoves: (
 primary: #58a934,
-primary-alpha: #58a934,
+primary-overlay-start: rgba(88,169,52,0.89),
+primary-overlay-end: rgba(88,169,52,0.91),
 primary-light: #58a934,
 primary-dark: #58a934,
 secondary: #FF8F00,
@@ -43,7 +47,8 @@ secondary-dark: #FF6F00
 ),
 funding: (
 primary: #00796A,
-primary-alpha: rgba(0,121,106,0.89),
+primary-overlay-start: rgba(0,121,106,0.89),
+primary-overlay-end: rgba(0,121,106,0.91),
 primary-light: #198678,
 primary-dark: #006054,
 secondary: #FF8F00,
@@ -52,7 +57,8 @@ secondary-dark: #FF6F00
 ),
 projects: (
 primary: #AD1457,
-primary-alpha: rgba(173,20,87,0.89),
+primary-overlay-start: rgba(173,20,87,0.89),
+primary-overlay-end: rgba(173,20,87,0.91),
 primary-light: #C2185B,
 primary-dark: #880E4F,
 secondary: #FF8F00,
@@ -61,7 +67,8 @@ secondary-dark: #FF6F00
 ),
 posts: (
 primary: #D84315,
-primary-alpha: rgba(216,67,21,0.89),
+primary-overlay-start: rgba(216,67,21,0.89),
+primary-overlay-end: rgba(216,67,21,0.91),
 primary-light: #E64A19,
 primary-dark: #BF360C,
 secondary: #FF8F00,
@@ -70,7 +77,8 @@ secondary-dark: #FF6F00
 ),
 goodhq: (
 primary: #4033E9,
-primary-alpha: #4033E9,
+primary-overlay-start: rgba(64,51,233,0.89),
+primary-overlay-end: rgba(64,51,233,0.91),
 primary-light: #4033E9,
 primary-dark: #160AAD,
 secondary: #FF8F00,
@@ -79,7 +87,8 @@ secondary-dark: #FF6F00
 ),
 digital-charter: (
 primary: #022347,
-primary-alpha: #022347,
+primary-overlay-start: rgba(2,35,71,0.89),
+primary-overlay-end: rgba(2,35,71,0.91),
 primary-light: #022347,
 primary-dark: #022347,
 secondary: #FF8F00,
@@ -88,7 +97,8 @@ secondary-dark: #FF6F00
 ),
 tfn: (
 primary: #3b9db1,
-primary-alpha: #3b9db1,
+primary-overlay-start: rgba(59,157,177,0.89),
+primary-overlay-end: rgba(59,157,177,0.91),
 primary-light: #3b9db1,
 primary-dark: #3b9db1,
 secondary: #FF8F00,
@@ -97,7 +107,8 @@ secondary-dark: #FF6F00
 ),
 funding-scotland: (
 primary: #71B745,
-primary-alpha: rgba(113, 183, 69, 0.89),
+primary-overlay-start: rgba(113, 183, 69, 0.89),
+primary-overlay-end: rgba(113, 183, 69, 0.91),
 primary-light: #71B745,
 primary-dark: #689F38,
 secondary: #FF8F00,
@@ -106,7 +117,8 @@ secondary-dark: #FF6F00
 ),
 credit-union: (
 primary: #1976D2,
-primary-alpha: rgba(21,101,192,0.89),
+primary-overlay-start: rgba(21,101,192,0.89),
+primary-overlay-end: rgba(21,101,192,0.91),
 primary-light: #1976D2,
 primary-dark: #145ea8,
 secondary: #FF8F00,
@@ -115,7 +127,8 @@ secondary-dark: #FF6F00
 ),
 digital: (
 primary: #1976D2,
-primary-alpha: rgba(25,118,210,0.89),
+primary-overlay-start: rgba(25,118,210,0.89),
+primary-overlay-end: rgba(25,118,210,0.91),
 primary-light: #1976D2,
 primary-dark: #145EA8,
 secondary: #022347,
@@ -124,7 +137,8 @@ secondary-dark: #A7C9F2
 ),
 services: (
 primary: #125AAC,
-primary-alpha: rgba(21,101,192,0.89),
+primary-overlay-start: rgba(21,101,192,0.89),
+primary-overlay-end: rgba(21,101,192,0.91),
 primary-light: #1565C0,
 primary-dark: #0E4686,
 secondary: #FF8F00,
@@ -266,8 +280,8 @@ primary-dark: #251032
 
     // .mdc-button:after,
     // .mdc-button:before,
-    // .mdc-theme--primary-alpha {
-    //     color: map-get($themeSelected, 'primary-alpha');
+    // .mdc-theme--primary-overlay-start {
+    //     color: map-get($themeSelected, 'primary-overlay-start');
     // }
     .mdc-theme--primary-light {
         color: map-get($themeSelected, 'primary-light');
@@ -293,8 +307,8 @@ primary-dark: #251032
     .mdc-simple-menu .mdc-list-item:after,
     .mdc-simple-menu .mdc-list-item:before,
     .splash-image .header-caption,
-    .mdc-theme--primary-alpha-bg {
-        background-color: map-get($themeSelected, 'primary-alpha');
+    .mdc-theme--primary-overlay-start-bg {
+        background-color: map-get($themeSelected, 'primary-overlay-start');
     }
     .mdc-theme--primary-light-bg {
         background-color: map-get($themeSelected, 'primary-light') !important;
@@ -342,8 +356,8 @@ primary-dark: #251032
     .splash-overlay {
         background-image: linear-gradient(
         66deg,
-        map-get($themeSelected, 'primary-alpha'),
-        map-get($themeSelected, 'primary-alpha') 47%,
+        map-get($themeSelected, 'primary-overlay-start'),
+        map-get($themeSelected, 'primary-overlay-end') 47%,
         transparent 47.08%,
         transparent
         );
@@ -352,8 +366,8 @@ primary-dark: #251032
         .splash-overlay {
             background-image: linear-gradient(
             66deg,
-            map-get($themeSelected, 'primary-alpha'),
-            map-get($themeSelected, 'primary-alpha') 52%,
+            map-get($themeSelected, 'primary-overlay-start'),
+            map-get($themeSelected, 'primary-overlay-end') 52%,
             transparent 52.08%,
             transparent
             );
@@ -366,8 +380,8 @@ primary-dark: #251032
         .splash-overlay {
             background-image: linear-gradient(
             66deg,
-            map-get($themeSelected, 'primary-alpha'),
-            map-get($themeSelected, 'primary-alpha') 57%,
+            map-get($themeSelected, 'primary-overlay-start'),
+            map-get($themeSelected, 'primary-overlay-end') 57%,
             transparent 57.08%,
             transparent
             );
@@ -380,8 +394,8 @@ primary-dark: #251032
         .splash-overlay {
             background-image: linear-gradient(
             66deg,
-            map-get($themeSelected, 'primary-alpha'),
-            map-get($themeSelected, 'primary-alpha') 67%,
+            map-get($themeSelected, 'primary-overlay-start'),
+            map-get($themeSelected, 'primary-overlay-end') 67%,
             transparent 67.08%,
             transparent
             );
@@ -394,15 +408,15 @@ primary-dark: #251032
         .splash-overlay {
             background-image: linear-gradient(
             66deg,
-            map-get($themeSelected, 'primary-alpha'),
-            map-get($themeSelected, 'primary-alpha')
+            map-get($themeSelected, 'primary-overlay-start'),
+            map-get($themeSelected, 'primary-overlay-end')
             );
         }
     }
     .home .cta-content.callout-image {
         background-image: linear-gradient(
-        map-get($themeServices, 'primary-alpha'),
-        map-get($themeServices, 'primary-alpha')
+        map-get($themeServices, 'primary-overlay-start'),
+        map-get($themeServices, 'primary-overlay-start')
         ),
         url('https://storage.googleapis.com/scvo-cms/23595/THEGATHERING-22.02.17_0475.jpg');
         a:hover .fa-fw {
@@ -412,8 +426,8 @@ primary-dark: #251032
     }
     .digital .callout-image {
         background-image: linear-gradient(
-        map-get($themeDefault, 'primary-alpha'),
-        map-get($themeDefault, 'primary-alpha')
+        map-get($themeDefault, 'primary-overlay-start'),
+        map-get($themeDefault, 'primary-overlay-start')
         ),
         url('https://storage.googleapis.com/scvo-cms/23602/THEGATHERING-23.02.17_0303.jpg');
         .mdc-button {
@@ -428,8 +442,8 @@ primary-dark: #251032
     }
     .policy-research .callout-image {
         background-image: linear-gradient(
-        map-get($themeDefault, 'primary-alpha'),
-        map-get($themeDefault, 'primary-alpha')
+        map-get($themeDefault, 'primary-overlay-start'),
+        map-get($themeDefault, 'primary-overlay-start')
         ),
         url('https://storage.googleapis.com/scvo-cms/23594/THEGATHERING-22.02.17_0028.jpg');
         color: white;
