Local copy of cookie notice script

--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -220,7 +220,7 @@
     <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
     <script type="text/javascript" src="/assets/js/headroom.min.js"></script>
     <script type="text/javascript" id="cookieinfo"
-    	src="//cookieinfoscript.com/js/cookieinfo.min.js"
+    	src="/assets/js/cookieinfo.min.js"
     	data-bg="#251032"
     	data-fg="#FFFFFF"
     	data-link="#FFFFFF"
