--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -71,7 +71,7 @@
                 <div class="mdc-layout-grid__inner" style="position: relative;">
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" style="text-align: center;">
                         <a href="https://thegathering.scot/">
-                            <img class="header-image" alt="" src="https://thegathering.scot/wp-content/uploads/2017/09/g2018-logo-WHITE-DETAIL.png" style="max-width: 100%; height: auto;">
+                            <img class="header-image" alt="" src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/g2018-logo-WHITE-DETAIL.png" style="max-width: 100%; height: auto;">
                         </a>
                     </div>
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
