--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -938,7 +938,7 @@ figure {
 }
 .page-related,
 .post-related {
-    margin-bottom: $spacing-unit*2;
+    margin: $spacing-unit*2 0;
     h3 {
         margin-bottom: $spacing-unit;
     }
