--- a/functions/test-db/json2/digitalparticipation/templates/layout.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/layout.hbs
@@ -148,7 +148,7 @@
             </footer>
         </div>
     </scvo-site>
-    <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
+    <script type="text/javascript" src="/assets/js/material-components-web.min.js"></script>
     <script type="text/javascript">
     // Material Design Components
     mdc.autoInit();
@@ -165,7 +165,6 @@
     </script>
     <script type="text/javascript" src="inline.bundle.js"></script>
     <script type="text/javascript" src="polyfills.bundle.js"></script>
-    <script type="text/javascript" src="styles.bundle.js"></script>
     <script type="text/javascript" src="vendor.bundle.js"></script>
     <script type="text/javascript" src="main.bundle.js"></script>
 </body>
