Fixed footer logos

--- a/functions/test-db/json2/digitalparticipation/templates/layout.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/layout.hbs
@@ -135,10 +135,10 @@
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
                                     <a href="http://gov.scot/Topics/Economy/digital">
-                                        <img src="https://storage.googleapis.com/digitalparticipation/images/logos/digital-scotland.png" alt="Digital Scotland" class="logo digital-scotland" />
+                                        <img src="/assets/images/digital-scotland-logo.png" alt="Digital Scotland" class="logo digital-scotland" />
                                     </a>
-                                    <a href="http://scvo.org">
-                                        <img src="https://storage.googleapis.com/digitalparticipation/images/logos/scvo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
+                                    <a href="https://scvo.org" title="Scottish Council for Voluntary Organisations">
+                                        <img src="/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
                                     </a>
                                 </div>
                             </div>
@@ -149,6 +149,17 @@
         </div>
     </scvo-site>
     <script type="text/javascript" src="/assets/js/material-components-web.min.js"></script>
+    <script type="text/javascript" id="cookieinfo"
+    	src="/assets/js/cookieinfo.min.js"
+    	data-bg="#02162E"
+    	data-fg="#FFFFFF"
+    	data-link="#FFFFFF"
+        data-divlink="#FFFFFF"
+        data-divlinkbg="#022347"
+        data-moreinfo="/privacy-cookies-policy"
+    	data-cookie="CookieInfoScript"
+    	data-text-align="left">
+    </script>
     <script type="text/javascript">
     // Material Design Components
     mdc.autoInit();
@@ -157,7 +168,7 @@
     var $buoop = {notify:{i:-4,f:-4,o:-4,s:-2,c:-4},unsecure:true,api:5};
     function $buo_f(){
      var e = document.createElement("script");
-     e.src = "//browser-update.org/update.min.js";
+     e.src = "/assets/js/browser-update.min.js";
      document.body.appendChild(e);
     };
     try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
