--- a/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
@@ -133,8 +133,8 @@
                                     </p>
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
-                                    <a href="http://scvo.org">
-                                        <img src="https://storage.cloud.google.com/digitalparticipation/images/logos/scvo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
+                                    <a href="https://scvo.org" title="Scottish Council for Voluntary Organisations">
+                                        <img src="/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
                                     </a>
                                 </div>
                             </div>
@@ -145,6 +145,17 @@
         </div>
     </scvo-site>
     <script type="text/javascript" src="/assets/js/material-components-web.min.js"></script>
+    <script type="text/javascript" id="cookieinfo"
+    	src="/assets/js/cookieinfo.min.js"
+    	data-bg="#1A1A19"
+    	data-fg="#FFFFFF"
+    	data-link="#FFFFFF"
+        data-divlink="#FFFFFF"
+        data-divlinkbg="#2C2C2B"
+        data-moreinfo="/privacy-cookies-policy"
+    	data-cookie="CookieInfoScript"
+    	data-text-align="left">
+    </script>
     <script type="text/javascript">
     // Material Design Components
     mdc.autoInit();
@@ -153,7 +164,7 @@
     var $buoop = {notify:{i:-4,f:-4,o:-4,s:-2,c:-4},unsecure:true,api:5};
     function $buo_f(){
         var e = document.createElement("script");
-        e.src = "//browser-update.org/update.min.js";
+        e.src = "/assets/js/browser-update.min.js";
         document.body.appendChild(e);
     };
     try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
