--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -202,7 +202,7 @@
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
                                     <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
-                                        <img src="/assets/images/scvo-logo.png" />
+                                        <img src="/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" />
                                     </a>
                                 </div>
                             </div>
