--- a/functions/test-db/json2/digitalparticipation/digitalparticipation-styles.scss
+++ b/functions/test-db/json2/digitalparticipation/digitalparticipation-styles.scss
@@ -1119,6 +1119,7 @@ footer {
     }
     .logo.scvo {
         position: absolute;
+        height: 45px;
         bottom: 0.7rem;
         right: 0.75rem;
     }
