--- a/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
+++ b/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
@@ -572,6 +572,7 @@ footer {
     }
     .logo.scvo {
         position: absolute;
+        height: 45px;
         bottom: 1.2rem;
         right: 0.75rem;
     }
