--- a/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
@@ -144,7 +144,7 @@
             </footer>
         </div>
     </scvo-site>
-    <script type="text/javascript" src="/assets/js/material-components-web.min.js"></script>
+    <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
     <script type="text/javascript" id="cookieinfo"
     	src="/assets/js/cookieinfo.min.js"
     	data-bg="#1A1A19"
