--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -422,7 +422,7 @@ primary-dark: #251032
         url('https://storage.googleapis.com/scvo-cms/23595/THEGATHERING-22.02.17_0475.jpg');
         a:hover .fa-fw {
             background-color: white !important;
-            color: map-get($themeServices, 'primary') !important;
+            color: map-get($themeJobs, 'primary') !important;
         }
     }
     .digital .callout-image {
@@ -483,6 +483,11 @@ primary-dark: #251032
             map-get($themeServices, 'primary-overlay-start')
         ),
         url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/edward-new-940x470.jpg');
+        .mdc-button:hover {
+            background-color: white !important;
+            border-color: map-get($themeServices, 'primary-dark') !important;
+            color: map-get($themeServices, 'primary') !important;
+        }
     }
 
     footer {
