Added methods to search forms

--- a/functions/test-db/json2/scvo/templates/grants/grant-charter-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grants/grant-charter-search.hbs
@@ -34,7 +34,7 @@
 
                     <hr />
 
-                    <form [searchroute]="'grant_search'" data-auto-search="true">
+                    <form action="/digital/participation/charter-fund/projects" method="POST" [searchroute]="'grant_charter_search'" data-auto-search="true">
                         <div class="mdc-textfield mdc-textfield--upgraded">
                             <input type="text" class="mdc-textfield__input" name="q" id="grant-charter-keywords" value="{{params.query.q}}" placeholder="Search query">
                             <div class="mdc-textfield__bottom-line"></div>
