--- a/functions/test-db/json2/scvo/templates/events/event-search.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-search.hbs
@@ -24,7 +24,7 @@
         </ul>
 
         <h2>Find training courses &amp; events</h2>
-        <form [searchroute]="'event_search'" data-auto-search="true">
+        <form action="/events" method="POST" [searchroute]="'event_search'" data-auto-search="true">
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone sidebar events-sidebar">
