--- a/functions/test-db/json2/scvo/templates/staff/staff-search.hbs
+++ b/functions/test-db/json2/scvo/templates/staff/staff-search.hbs
@@ -26,7 +26,7 @@
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-                    <form [searchroute]="'staff_search'" data-auto-search="true">
+                    <form action="/about/staff-team" method="POST" [searchroute]="'staff_search'" data-auto-search="true">
                         <h3>Filter</h3>
                         <div class="mdc-form-field">
                             <select class="mdc-select" role="listbox" id="department" name="department">
