--- a/functions/test-db/json2/scvo/templates/main_search/search.hbs
+++ b/functions/test-db/json2/scvo/templates/main_search/search.hbs
@@ -21,7 +21,7 @@
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar">
-                    <form [searchroute]="'main_search'" data-auto-search="true" autocomplete="off">
+                    <form [searchroute]="'main_search'" data-auto-search="true" autocomplete="off" action="/search">
                         <input type="text" class="mdc-textfield__input searchRoute" placeholder="Search keywords" value="{{params.query.q}}" name="q" id="main-q">
                         {{#*inline "filter_checkbox"}}
                             <div class="mdc-form-field">
