Updated charter and human rights to not use angular

--- a/functions/test-db/json2/digitalparticipation/templates/signatory-search.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/signatory-search.hbs
@@ -1,7 +1,7 @@
 <div class="signatories">
     <h1>Signatories <span class="small">({{supplimentaryResponses.total.hits.total}})</span></h1>
 
-    <form [searchroute]="'signatory_search'" data-auto-search="true" id="signatory-search">
+    <form action="/signatories" [searchroute]="'signatory_search'" data-auto-search="true" id="signatory-search">
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
