--- a/functions/test-db/json2/humanrightsdeclaration/templates/signatory-search.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/signatory-search.hbs
@@ -1,7 +1,7 @@
 <div class="signatories">
     <h1>Signatories <span class="small">({{supplimentaryResponses.total.hits.total}})</span></h1>
 
-    <form [searchroute]="'signatory_search'" data-auto-search="true">
+    <form action="/signatories" [searchroute]="'signatory_search'" data-auto-search="true">
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
