--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1168,7 +1168,7 @@ figure {
                 }
             }
             #upper-tab-bar {
-                margin-top: $spacing-unit*1.75;
+                // margin-top: $spacing-unit*1.75;
                 margin-right: $spacing-unit;
                 .mdc-tab {
                     min-width: auto;
@@ -1406,7 +1406,6 @@ figure {
     overflow: hidden;
     position: relative;
     min-height: 25vh;
-    // min-height: $spacing-unit*9;
 }
 .splash-overlay.splash-overlay-hidden {
     background-image: none;
@@ -1414,7 +1413,6 @@ figure {
 .splash-image {
     background-size: cover;
     background-position: center center;
-    // padding-bottom: $spacing-unit;
     .container-fluid {
         display: flex;
         justify-content: center;
@@ -1426,9 +1424,6 @@ figure {
         .mdc-layout-grid {
             width: 44%;
             margin: $spacing-unit*(2/3) 0 $spacing-unit;
-            // position: absolute;
-            // top: 50%;
-            // transform: translateY(-50%);
         }
     }
     img.header-text {
@@ -2659,9 +2654,6 @@ footer {
     .mdc-toolbar-fixed-adjust {
         padding-top: 130px;
     }
-    // .mdc-toolbar .mdc-toolbar__row .container-fluid #upper-tab-bar {
-    //     margin-right: 0;
-    // }
     .mdc-toolbar .mdc-toolbar__row .container-fluid .mdc-tab-bar .mdc-tab {
         padding: 0 $spacing-unit/2;
     }
