--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -963,8 +963,11 @@ figure {
         margin-bottom: $spacing-unit;
     }
 }
-.page-related h3 {
+.page-related {
     margin-top: 0;
+    h3 {
+        margin-top: 0;
+    }
 }
 
 .c-align {
