--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -213,11 +213,11 @@
         </div>
     </scvo-site>
 
-    <div id="spinner" style="position:fixed; top:0; left:0; right:0; bottom:0; background-color:#fff; z-index:9999; display:flex; align-items:center; justify-content:center; display:none;">
+    <!-- <div id="spinner" style="position:fixed; top:0; left:0; right:0; bottom:0; background-color:#fff; z-index:9999; display:flex; align-items:center; justify-content:center; display:none;">
         <span class="fal fa-spinner-third fa-spin" style="color:#C2185B; font-size:2rem;"></span>
-    </div>
+    </div> -->
 
-    <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
+    <script type="text/javascript" src="/assets/js/material-components-web.min.js"></script>
     <script type="text/javascript" src="/assets/js/headroom.min.js"></script>
     <script type="text/javascript" id="cookieinfo"
     	src="/assets/js/cookieinfo.min.js"
