--- a/functions/test-db/json2/scvo/templates/members/member-search.hbs
+++ b/functions/test-db/json2/scvo/templates/members/member-search.hbs
@@ -33,7 +33,7 @@
                                     <h2 class="mdc-card__title mdc-card__title--large">
                                         Search SCVO's {{addCommas supplimentaryResponses.total.hits.total}} member organisations
                                     </h2>
-                                    <form action="/about/members" method="POST" [searchroute]="'members'" data-auto-search="true">
+                                    <form action="/about/members" method="POST" [searchroute]="'member_search'" data-auto-search="true">
                                         <div class="mdc-textfield">
                                             <input type="text" class="mdc-textfield__input searchRoute" placeholder="Search" value="{{params.query.q}}" name="q">
                                             <div class="mdc-textfield__bottom-line"></div>
