--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -58,7 +58,7 @@
                             </nav>
                         </section>
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-end mdc-toolbar__section--shrink-to-fit toolbar-search">
-                            <form [searchroute]="'main_search'" class="mdc-form-field mdc-form-field--align-end search_form" autocomplete="off" action="search">
+                            <form [searchroute]="'main_search'" class="mdc-form-field mdc-form-field--align-end search_form" autocomplete="off" action="/search" method="GET">
                                 <div class="mdc-textfield">
                                     <input type="text" class="mdc-textfield__input white-text mdc-text-field searchRoute" placeholder="Search" id="q" name="q" aria-label="Search keywords" value="{{params.query.q}}">
                                 </div>
