--- a/functions/test-db/json2/scvo/partials/trustee-search.hbs
+++ b/functions/test-db/json2/scvo/partials/trustee-search.hbs
@@ -1,4 +1,4 @@
-<form action="/projects-campaigns/terrific-trustees/search" method="POST" [searchroute]="'trustee_search'" data-auto-search="true" autocomplete="off">
+<form action="/projects-campaigns/terrific-trustees/search" method="GET" [searchroute]="'trustee_search'" data-auto-search="true" autocomplete="off">
     <div class="mdc-textfield mdc-textfield--upgraded">
         <input type="text" class="mdc-textfield__input" name="q" id="trustee-keywords" value="{{params.query.q}}" placeholder="Search query">
         <div class="mdc-textfield__bottom-line"></div>
