--- a/functions/test-db/json2/scvo/templates/jobs/goodmoves-job-search.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/goodmoves-job-search.hbs
@@ -24,7 +24,7 @@
         </ul>
 
         <h2 class="mdc-card__title mdc-card__title--large">Find Jobs</h2>
-        <form action="/jobs/search" method="POST" [searchroute]="'job_search'" data-auto-search="true">
+        <form action="/jobs/search" method="GET" [searchroute]="'job_search'" data-auto-search="true">
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
                     <div class="mdc-layout-grid__cell">
