--- a/functions/test-db/json2/scvo/templates/pages/page-blogs.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-blogs.hbs
@@ -37,7 +37,7 @@
                     {{/compare}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar post-sidebar">
-                    {{> wee_search title="Search posts" searchRoute="main_search" extraParams='{ "type": "scvo-cms-post" }'}}
+                    {{> wee_search title="Search posts" searchPath="/search" searchRoute="main_search" extraParams='{ "type": "scvo-cms-post" }'}}
 
                     {{#with supplimentaryResponses.page.hits.hits.[0]._source}}
                     {{{rendered.full}}}
