--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -69,7 +69,7 @@
                             </form>
                         </section>
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-end mdc-toolbar__section--shrink-to-fit">
-                            <button class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" id="menu_button" aria-label="Menu" alt="Menu">
+                            <button id="menu_button" class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" onclick="window.drawer.open = true">
                                 <span class="far fa-2x fa-bars" aria-hidden="true"></span>
                             </button>
                         </section>
@@ -88,8 +88,8 @@
                 </div>
             </header>
 
-            <aside class="mdc-temporary-drawer" id="menu_drawer" dir="rtl">
-                <nav class="mdc-temporary-drawer__drawer" dir="ltr">
+            <aside class="mdc-temporary-drawer" id="menu_draw" dir="rtl">
+                <nav class="mdc-temporary-drawer__drawer">
                     <header class="mdc-temporary-drawer__header">
                         <div class="mdc-temporary-drawer__header-content mdc-theme--primary-bg">
                             <img src="/assets/images/scvo-logo.png" />
