--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -217,7 +217,7 @@
         <span class="fal fa-spinner-third fa-spin" style="color:#C2185B; font-size:2rem;"></span>
     </div> -->
 
-    <script type="text/javascript" src="/assets/js/material-components-web.min.js"></script>
+    <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
     <script type="text/javascript" src="/assets/js/headroom.min.js"></script>
     <script type="text/javascript" id="cookieinfo"
     	src="/assets/js/cookieinfo.min.js"
