Fixed toolbar alignment

--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -44,7 +44,7 @@
             <header class="mdc-toolbar mdc-toolbar--fixed mdc-theme--primary-light-bg">
                 <div class="mdc-toolbar__row">
                     <div class="container-fluid">
-                        <section class="mdc-toolbar__section mdc-toolbar__section--shrink-to-fit mdc-toolbar__section--align-start">
+                        <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
                             <span class="mdc-toolbar__title catalog-title">
                                 <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
                                     <img src="/assets/images/scvo-logo.png" />
