--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -773,7 +773,8 @@ figure {
                 font-size: 1.25rem;
                 padding: 0.5rem 1rem;
                 align-self: flex-end;
-                margin-bottom: 2.75rem;
+                margin: 2.75rem 0;
+                max-width: 65%;
             }
         }
     }
@@ -2449,6 +2450,7 @@ p:last-child {
         }
     }
 }
+.static-sidebar,
 .post-content .full {
     margin-top: $spacing-unit/2;
     word-wrap: break-word;
@@ -2913,6 +2915,11 @@ footer {
                 font-size: 0.97rem;
                 // margin-bottom: 0;
             }
+        }
+    }
+    .mdc-card {
+        .mdc-card__title--large {
+            font-size: 1rem;
         }
     }
     // .home .featured-content .search_form {
