--- a/functions/test-db/json2/scvo/templates/pages/page-cjs-employees.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-cjs-employees.hbs
@@ -6,7 +6,7 @@
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
-                    {{> menu_cjs}}
+                    {{> menu_cjs_employees}}
                     {{> sidebar_cjs}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
