--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -619,7 +619,7 @@ primary-dark: #251032
 .library-sidebar,
 .home .cta-content,
 .home .search,
-.home .featured-text,
+.home .featured-content,
 .home .latest-content,
 .home .gist.scvo-cms-post,
 .home .gist.goodmoves-job,
@@ -851,6 +851,12 @@ figure {
             .post-info {
                 padding-bottom: $spacing-unit/2;
             }
+        }
+        .mdc-typography--caption {
+            font-weight: 600;
+            font-size: 1rem;
+            margin-left: 0.25rem;
+            letter-spacing: -0.02rem;
         }
         .featured-text {
             padding: 0 0 $spacing-unit*2;
