--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -93,7 +93,10 @@
     </div>
 
     <div class="container-fluid">
-        <h2>Latest blog post</h2>
+        <h2>
+            Latest blog post
+            <a href="/blogs" class="mdc-typography--caption">See all</a>
+        </h2>
     </div>
     {{#with supplimentaryResponses.blogs_latest.hits.hits.[0]}}
     <div {{#if _source.header_background}}class="featured-background-image" style="background-image: url('{{_source.header_background}}');"{{else}}class="featured-text"{{/if}}>
@@ -124,7 +127,10 @@
     </div>
 
     <div class="container-fluid">
-        <h2>Latest press release</h2>
+        <h2>
+            Latest press release
+            <a href="/press-media" class="mdc-typography--caption">See all</a>
+        </h2>
     </div>
     {{#with supplimentaryResponses.press_latest.hits.hits.[0]}}
     <div {{#if _source.header_background}}class="featured-background-image" style="background-image: url('{{_source.header_background}}');"{{else}}class="featured-text"{{/if}}>
