--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -22,12 +22,7 @@
     <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#00838f">
     <link rel="search" type="application/opensearchdescription+xml" title="SCVO" href="/assets/opensearch.xml" />
-    <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
-    <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
-    <link type="text/css" rel="stylesheet" href="/assets/css/scvo-styles.css">
-    <style type="text/css">
-    {{{this.css}}}
-    </style>
+    <script src="/assets/js/swiper.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-27"></script>
     <script>
@@ -37,6 +32,12 @@
 
       gtag('config', 'UA-3467930-27');
     </script>
+    <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
+    <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
+    <link type="text/css" rel="stylesheet" href="/assets/css/scvo-styles.css">
+    <style type="text/css">
+    {{{this.css}}}
+    </style>
 </head>
 <body class="mdc-theme--site-bg {{#if route.params.path}}{{replace route.params.path '_' ' '}}{{else}}home{{/if}}">
     <scvo-site>
