Still trying to get slider to work

--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -22,7 +22,6 @@
     <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#00838f">
     <link rel="search" type="application/opensearchdescription+xml" title="SCVO" href="/assets/opensearch.xml" />
-    <script src="/assets/js/swiper.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-27"></script>
     <script>
@@ -221,6 +220,7 @@
 
     <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
     <script type="text/javascript" src="/assets/js/headroom.min.js"></script>
+    <script type="text/javascript" src="/assets/js/swiper.min.js"></script>
     <script type="text/javascript" id="cookieinfo"
     	src="/assets/js/cookieinfo.min.js"
     	data-bg="#251032"
@@ -233,25 +233,14 @@
     	data-text-align="left">
     </script>
     <script type="text/javascript">
-    // Material Design Components
-    mdc.autoInit();
-
-    // Browser Update
-    var $buoop = {notify:{i:-5,f:-4,o:-4,s:-2,c:-4},insecure:true,api:5};
-    function $buo_f(){
-        var e = document.createElement("script");
-        e.src = "/assets/js/browser-update.min.js";
-        document.body.appendChild(e);
-    };
-    try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
-    catch(e){window.attachEvent("onload", $buo_f)}
+    {{{javascript}}}
     </script>
-    <script type="text/javascript">
-    {{{ javascript }}}
-    </script>
-<!--    <script type="text/javascript" src="inline.bundle.js"></script>
+<!--
+    NGX
+    <script type="text/javascript" src="inline.bundle.js"></script>
     <script type="text/javascript" src="polyfills.bundle.js"></script>
     <script type="text/javascript" src="vendor.bundle.js"></script>
-    <script type="text/javascript" src="main.bundle.js"></script> -->
+    <script type="text/javascript" src="main.bundle.js"></script>
+-->
 </body>
 </html>
