--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -33,7 +33,7 @@
     </script>
     <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
-    <link type="text/css" rel="stylesheet" href="/assets/css/scvo-styles.css">
+    <link type="text/css" rel="stylesheet" href="/assets/css/scvo-styles-2.css">
     <style type="text/css">
     {{{this.css}}}
     </style>
